<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/include_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/login_msg"
        android:textColor="@color/item_text_one"
        android:textSize="19sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_login"
            style="@style/defaule_button"
            android:background="@drawable/btn_green_shape"
            android:text="@string/btn_login" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/defaule_button"
            android:background="@drawable/btn_default_shape"
            android:text="@string/btn_cancel" />
    </LinearLayout>
</RelativeLayout>