<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/include_charge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="260dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_circle"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charge_success_msg"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"

            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/pb_splsha_or_charge_in"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:indeterminateTint="@color/colorPrimary"
            android:indeterminateTintMode="src_atop"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/purash"
            android:textColor="@color/item_text_one"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/charge_progress_msg"
            android:textColor="@color/item_text_two"
            android:textSize="16sp" />
    </LinearLayout>
</FrameLayout>