<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.baisi.whatsfreecall.ui.activity.ErrorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/error" />

            <TextView
                android:id="@+id/tv_show_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="Error:We are sorry about this error"
                android:textColor="@color/red"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="We are sorry about this error"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_web_login"
                style="@style/error_button"
                android:background="@drawable/btn_green_shape"
                android:text="@string/login_web"
                android:textAllCaps="false"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_error"
                style="@style/defaule_button"
                android:background="@drawable/btn_error_shape"
                android:text="@string/report_the_error" />

            <Button
                android:id="@+id/btn_close"
                style="@style/defaule_button"
                android:background="@drawable/btn_default_shape"
                android:text="@string/btn_cancel"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>
    <include layout="@layout/progress_layout" />
</FrameLayout>
